# cial-challenge

./: .env  .gitignore  Makefile  README.md  pyproject.toml
cial/: Dockerfile  Makefile
cial/app/: __main__.py  app.py  polygon_api_handler.py  routes.py  schemas.py  stocks_handler.py
cial/app/database/: database.py  models.py
cial/stocks_crawler/stocks/: items.py  settings.py
cial/stocks_crawler/stocks/spiders/: stocks_spider.py
cial/stocks_crawler/stocks/tests/: test_stocks_spider.py
cial/tests/: test_polygon_api_handler.py
stocks/stocks/: items.py  monitors.py  settings.py
stocks/stocks/res/: schema.json
stocks/stocks/spiders/: stocks_spider.py
stocks/stocks/tests/: test_stocks_spider.py
