[tool.poetry]
name = "cial-challenge"
version = "0.1.0"
description = ""
authors = ["betinacosta <bmcosta13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.12.0"
regex = "^2024.11.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
