[tool.poetry]
name = "cial-challenge"
version = "0.1.0"
description = ""
authors = ["betinacosta <bmcosta13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.12.0"
regex = "^2024.11.6"
pytest = "^8.3.3"
pydantic = "^2.10.2"
uvicorn = "^0.32.1"
klein = "^24.8.0"
python-dotenv = "^1.0.1"
twisted = "^24.10.0"
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"
requests-cache = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
